== 0.3.104 2009-09-27

This release has some minor changes to the command line and formatters. The biggest change is internally, paving
the way for more programming language support in Cuke4Duke, which now supports step definitions written in Java, Scala, 
Groovy, Clojure and Javascript!

=== New Features
* "usage" formatter should display progress (#437 Aslak Hellesøy)
* Added example for Ramaze. (Yutaka HARA)

=== Bugfixes
* Fixed regression in profile formatter from 0.3.102. (Aslak Hellesøy)
* Raise a proper error message if someone forgets @ for tags, example: --tags ~foo or --tags bar. (Aslak Hellesøy)
* lib/cucumber/formatter/html.rb requires xml (#458 Brent Snook)
* lib/cucumber/formatter/html.rb requires ruby-debug (#455 Assaf Arkin)
* Allow for STDOUT formatters to be defined in profiles.  Addresses an Autotest plugin issue. (#375 Gabriel Medina)

=== Removed features
* The --dry-run option no longer implies --no-source and --no-snippets. It only implies --no-snippets. (Aslak Hellesøy)

=== Changed features
* The profile and usage formatters have been combined to the usage formatter. Use it eith or without --dry-run. See --help for more. (Aslak Hellesøy)
* The steps formatter has been renamed to stepdefs formatter. (Aslak Hellesøy)
* The internal programming language API has changed, giving more power to the implementation. See #428. (Aslak Hellesøy)

== 0.3.103 2009-09-24

This release gives you back some of the control over the Rails environment that was accidentally taken away from you in the 
previous release.

Using this release on a Rails project requires a rerun of script/generate cucumber.

=== New Features
* Added a new @no-txn tag to selectively turn off transactions for a particlular scenario.
* Added back a way to globally turn off transactions.
* Renamed @allow_rescue tag to @allow-rescue.

=== Bugfixes
* Gracefully handle cases when optional regexp groups are not matched. Ex: /should( not)? be flashed '([^']*?)'$/ (Aslak Hellesøy)
